[gd_scene load_steps=15 format=3 uid="uid://de7gbqs7t1ttr"]

[ext_resource type="Script" path="res://scripts/enemy/shooting_flying_enemy.gd" id="1_sxea8"]
[ext_resource type="Texture2D" uid="uid://ct8vsqyomts3q" path="res://art/enemies/ghost_normal.png" id="2_ckgjx"]
[ext_resource type="Texture2D" uid="uid://cpl8x4f0wv00s" path="res://art/enemies/ghost_dead.png" id="2_i2cwj"]
[ext_resource type="Script" path="res://scripts/states/characters/CharacterStateMachine.gd" id="3_etto7"]
[ext_resource type="Texture2D" uid="uid://ell6bkoupilo" path="res://art/enemies/ghost.png" id="3_kexp6"]
[ext_resource type="Script" path="res://scripts/states/characters/enemy/flyingshooting/ShootingFlyingEnemyIdleState.gd" id="4_tckw3"]
[ext_resource type="Script" path="res://scripts/states/characters/enemy/flyingshooting/ShootingFlyingEnemyPursuingState.gd" id="5_770an"]
[ext_resource type="AudioStream" uid="uid://xfqgm233wm5f" path="res://music/ghost_shoot.wav" id="8_1tg4t"]
[ext_resource type="AudioStream" uid="uid://c7g3edn5hpxxs" path="res://music/ghost_player_spot.wav" id="8_2dcer"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lfew3"]
size = Vector2(122, 122)

[sub_resource type="SpriteFrames" id="SpriteFrames_kb3yf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_i2cwj")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ckgjx")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_kexp6")
}, {
"duration": 1.0,
"texture": ExtResource("2_ckgjx")
}],
"loop": false,
"name": &"Shoot",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ljuon"]
size = Vector2(122, 122)

[sub_resource type="Animation" id="Animation_glhm7"]
resource_name = "got_hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7yex2"]
_data = {
"got_hit": SubResource("Animation_glhm7")
}

[node name="ShootingFlyingEnemy" type="CharacterBody2D"]
scale = Vector2(0.7, 0.7)
collision_layer = 4
collision_mask = 5
script = ExtResource("1_sxea8")
flying_speed = 15000

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_lfew3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_kb3yf")
animation = &"Shoot"
frame = 1
frame_progress = 1.0

[node name="CharacterStateMachine" type="Node" parent="."]
script = ExtResource("3_etto7")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="CharacterStateMachine"]
script = ExtResource("4_tckw3")

[node name="Pursuing" type="Node" parent="CharacterStateMachine"]
script = ExtResource("5_770an")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_ljuon")

[node name="DamageAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7yex2")
}

[node name="PlayerDetector" type="RayCast2D" parent="."]
collision_mask = 3

[node name="StateLabel" type="Label" parent="."]
offset_left = -18.5714
offset_top = -68.5714
offset_right = 21.4286
offset_bottom = -45.5714
text = "State"

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="spottedaudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_2dcer")
volume_db = -15.0

[node name="shootaudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_1tg4t")
volume_db = -15.0

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="shoot"]
